package com.backend.entity.enums;

public enum Gender { MALE, FEMALE, OTHER }