package com.backend.entity.enums;

public enum GuideStatus { ACTIVE,PENDING, INACTIVE }