package com.backend.entity.enums;

public enum PackageStatus { ACTIVE, INACTIVE }