package com.backend.entity.enums;

public enum PaymentStatus { PENDING, SUCCESS, FAILED, REFUNDED }