package com.backend.entity.enums;

public enum RefundStatus { REQUESTED, APPROVED, REJECTED, ISSUED }