package com.backend.entity.enums;

public enum ReservationStatus { PENDING, CONFIRMED, CANCELLED, COMPLETED, REFUNDED }

